@@ -2,6 +2,8 @@
 
 	* README.md: Add 'last commit' badge
 
+	* .travis.yml: Switch to bionic and R 4.0.0
+
 2020-01-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add a Debian badge
